--- a/index.html
+++ b/index.html
@@ -6,197 +6,203 @@
 <title>HelloKitty.cc</title>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
-body, html {
-  margin: 0;
-  height: 100%;
-  font-family: 'Press Start 2P', cursive;
-  color: #d0a8ff;
-  overflow: hidden;
-  background: black;
-}
+  body, html {
+    margin: 0;
+    height: 100%;
+    font-family: 'Press Start 2P', cursive;
+    color: #d0a8ff;
+    overflow: hidden;
+    background: black;
+  }
 
-canvas#matrix, canvas#modalMatrix, canvas#asciiFloating {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-}
+  canvas#matrix {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
 
-#enterScreen {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.8);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size: 2em;
-  cursor:pointer;
-  z-index: 10;
-}
+  #enterScreen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 2em;
+    cursor:pointer;
+    z-index: 10;
+  }
 
-#clock {
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  font-size: 1em;
-  color: #00ff00;
-  z-index: 5;
-}
+  #clock {
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    font-size: 1em;
+    color: #00ff00;
+    z-index: 5;
+  }
 
-#mainPage, #hoaPage {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  z-index: 2;
-  text-align: center;
-}
+  #mainPage, #hoaPage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    text-align: center;
+  }
 
-h1 {
-  font-size: 2em;
-  color: #d0a8ff;
-  text-shadow: 0 0 15px #b84cff, 0 0 30px #b84cff;
-  animation: glow 2s infinite alternate;
-}
+  h1 {
+    font-size: 2em;
+    color: #d0a8ff;
+    text-shadow: 0 0 15px #b84cff, 0 0 30px #b84cff;
+    animation: glow 2s infinite alternate;
+  }
 
-@keyframes glow {
-  from { text-shadow: 0 0 10px #b84cff; }
-  to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; }
-}
+  @keyframes glow {
+    from { text-shadow: 0 0 10px #b84cff; }
+    to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; }
+  }
 
-.boxes {
-  display: flex;
-  gap: 20px;
-  margin-top: 40px;
-}
+  .boxes {
+    display: flex;
+    gap: 20px;
+    margin-top: 40px;
+  }
 
-.display-box {
-  width: 200px;
-  padding: 12px;
-  background: rgba(0,0,0,0.6);
-  border: 2px solid #b84cff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #b84cff;
-  cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
+  .display-box {
+    width: 200px;
+    padding: 12px;
+    background: rgba(0,0,0,0.6);
+    border: 2px solid #b84cff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #b84cff;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
 
-.display-box:hover {
-  transform: scale(1.1);
-  box-shadow: 0 0 20px #ff00ff;
-}
+  .display-box:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px #ff00ff;
+  }
 
-.hoa-btn {
-  position: fixed;
-  top: 10px;
-  left: 20px;
-  font-size: 1em;
-  cursor: pointer;
-  color: #00ffff;
-  z-index: 5;
-  user-select: none;
-}
+  .hoa-btn {
+    position: fixed;
+    top: 10px;
+    left: 20px;
+    font-size: 1em;
+    cursor: pointer;
+    color: #00ffff;
+    z-index: 5;
+    user-select: none;
+  }
 
-.hoa-text-box {
-  width: 300px;
-  padding: 12px;
-  background: rgba(0,0,0,0.6);
-  border: 2px solid #00ffff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #00ffff;
-  color: #fff;
-  text-align: center;
-  font-size: 14px;
-  user-select: none;
-}
+  .hoa-text-box {
+    width: 300px;
+    padding: 12px;
+    background: rgba(0,0,0,0.6);
+    border: 2px solid #00ffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #00ffff;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+    user-select: none;
+  }
 
-.back-btn {
-  margin-top: 20px;
-  padding: 8px 12px;
-  background: #000;
-  border: 2px solid #00ffff;
-  cursor: pointer;
-  color: #00ffff;
-  border-radius: 6px;
-}
+  .back-btn {
+    margin-top: 20px;
+    padding: 8px 12px;
+    background: #000;
+    border: 2px solid #00ffff;
+    cursor: pointer;
+    color: #00ffff;
+    border-radius: 6px;
+  }
 
-.skip-btn {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 8px 12px;
-  background: black;
-  border: 2px solid #ff00ff;
-  color: #ff00ff;
-  cursor: pointer;
-  border-radius: 6px;
-  z-index: 5;
-}
+  .skip-btn {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 12px;
+    background: black;
+    border: 2px solid #ff00ff;
+    color: #ff00ff;
+    cursor: pointer;
+    border-radius: 6px;
+    z-index: 5;
+  }
 
-.now-playing {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  color: #00ff00;
-  font-size: 12px;
-  z-index: 5;
-}
+  .now-playing {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: #00ff00;
+    font-size: 12px;
+    z-index: 5;
+  }
 
-pre#flyingLogo {
-  position: absolute;
-  font-size: 10px;
-  color: #ff00ff;
-  white-space: pre;
-  z-index: 3;
-  pointer-events: none;
-}
+  pre#flyingLogo {
+    position: absolute;
+    font-size: 10px;
+    color: #ff00ff;
+    white-space: pre;
+    z-index: 3;
+    pointer-events: none;
+  }
 
-/* Owners Modal */
-.modal {
-  display:none;
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background: rgba(0,0,0,0.9);
-  z-index: 6;
-  align-items:center;
-  justify-content:center;
-}
+  /* Owners Modal */
+  .modal {
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.9);
+    z-index: 6;
+    align-items:center;
+    justify-content:center;
+  }
 
-.modal-content {
-  position: relative;
-  width: 400px;
-  height: 300px;
-  background: black;
-  border: 2px solid #00ff00;
-  overflow: hidden;
-  border-radius: 10px;
-}
+  .modal-content {
+    position: relative;
+    width: 400px;
+    height: 300px;
+    background: black;
+    border: 2px solid #00ff00;
+    overflow: hidden;
+    border-radius: 10px;
+  }
 
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor:pointer;
-  color:#00ff00;
-  font-size: 18px;
-}
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor:pointer;
+    color:#00ff00;
+    font-size: 18px;
+  }
+
+  canvas#modalMatrix {
+    position: absolute;
+    top:0;
+    left:0;
+  }
 
 </style>
 </head>
 <body>
 
 <canvas id="matrix"></canvas>
-<canvas id="asciiFloating"></canvas>
 
 <div id="enterScreen"><span>CLICK TO ENTER</span></div>
+
 <div id="clock"></div>
 
 <div id="mainPage">
@@ -216,30 +222,7 @@ pre#flyingLogo {
 
 <pre id="flyingLogo">
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣴⠾⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡿⠻⢶⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⠞⠋⠀⢠⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢿⡄⠀⠉⠻⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⣴⠟⠁⣴⠟⢠⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⣿⠀⢾⣆⠈⠻⣦⡀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⢀⡾⠃⢠⣾⡏⠀⢸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⡇⠀⢿⣧⡀⠘⢷⡀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⢀⣾⠁⢠⣿⣿⠁⠀⢸⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡇⠀⢸⣿⣷⡀⠘⣷⡀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⣾⠃⢀⣿⣿⣿⠀⠀⢸⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡇⠀⢸⣿⣿⣧⠀⠸⣧⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⣰⡏⠀⣼⣿⣿⣿⠀⠀⢸⡇⠀⠀⠀⠀⠀⣀⣤⣴⠶⠛⠛⠛⠛⠙⠛⠛⠛⠛⠶⢦⣤⣀⠀⠀⠀⠀⠀⣸⠇⠀⣸⣿⣿⣿⡇⠀⢿⡆⠀⠀⠀⠀
-⠀⠀⠀⠀⣿⠃⠀⣿⣿⣿⣿⣧⠀⠀⢻⡄⢀⣤⠶⠛⢉⣀⣤⣴⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣄⣀⠉⠛⠶⣤⡀⢠⡟⠀⢀⣿⣿⣿⣿⣷⠀⢸⡇⠀⠀⠀⠀
-⣶⣶⣴⡆⣿⠀⠀⣿⣿⣿⣿⣿⣧⡀⠀⠛⠋⢁⣤⣀⣙⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣉⣤⣄⡈⠙⠿⠀⢠⣿⣿⣿⣿⣿⣿⠀⢸⡇⠀⣠⠀⠀
-⣿⠀⢹⣇⣿⡄⠀⣿⣿⣿⣿⣿⣿⣿⣦⣄⣀⡈⠉⠙⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠉⠉⢁⣀⣠⣾⣿⣿⣿⣿⣿⣿⡿⠀⢸⣧⣰⠏⠀⡄
-⣿⠀⢀⠹⣿⣧⠀⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⢺⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇⢀⣿⣿⠏⠀⢀⡟
-⣿⡄⢻⣆⠘⢿⣇⠀⠹⣿⣿⣿⣿⣿⣿⢿⣿⠋⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠻⣿⠟⣹⣿⣿⣿⣿⣿⠋⠀⣼⡿⢃⣴⠟⢸⡇
-⢿⡇⠀⣿⣷⣄⠙⢷⣄⠈⠻⢿⣿⡿⠿⠟⠁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡀⠙⠿⠿⠿⠿⠛⠋⠁⣠⡾⠋⣠⣿⢇⠀⣼⠇
-⠀⢹⣆⠘⣿⣦⡉⠻⠗⠂⣿⣿⣿⣿⡟⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠛⣿⣿⣿⣿⣷⠀⣿⠛⢡⣤⣿⠁⣸⠇⠀
-⠀⠀⢿⡄⢻⣿⣧⣶⣤⡀⠙⣿⣿⣿⣥⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆⣿⣿⣇⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣼⣿⣿⡿⡇⣠⣴⣾⣿⣿⠇⢠⡿⠀⠀
-⠀⠀⠈⢷⡈⠻⣿⣿⣿⣿⡆⢸⣿⡿⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⢿⣿⡏⠀⢸⣿⣿⣿⡿⠋⢠⡾⠁⠀⠀
-⠀⠀⠀⠀⠻⢦⡈⠻⢿⣿⠀⣸⣿⣿⣶⣄⠀⠈⢙⡛⠻⢿⣿⣿⣿⣿⢸⣿⣿⣿⠉⣿⣿⣿⣿⠿⠟⢛⡉⠁⢀⣴⣾⣿⣿⡆⠸⣿⣿⠋⣀⡴⠏⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠙⢷⣄⠀⣼⣿⣿⣿⣿⣿⣷⣦⡘⠛⠷⠶⠀⠉⠛⣛⢺⣿⣿⣿⠀⠿⠛⠉⠠⠶⠾⠛⣃⣴⣿⣿⣿⣿⣿⣿⡄⠉⣹⡾⠋⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⢻⡆⠛⢿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣿⣿⣿⣷⣶⣿⣿⣿⣿⣿⣿⣿⣿⡿⠀⣰⡟⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⣦⠀⠙⢿⣿⡿⠿⠛⢻⣛⣻⣿⣿⣿⣿⡿⣿⣿⣿⣿⡿⣽⣿⣿⣿⣿⣛⣛⠛⠻⠿⣿⣿⡿⠋⢀⣼⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢷⣄⠈⠻⣿⣦⣀⡈⠻⢿⣿⣿⣿⣿⠃⣼⣿⣿⣿⣇⢸⣿⣿⣿⣿⡿⠋⣀⣀⣼⣿⠋⠀⣴⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⡄⠀⣿⣿⣿⣿⣄⠈⠻⣿⣿⡏⠸⣿⣿⣿⣿⡿⠀⣿⣿⡿⠋⠀⣴⣿⣿⣿⡇⠀⣸⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⣷⠀⢹⣿⣿⣿⣿⡎⢻⣦⣙⠛⠂⠈⢿⣿⡟⠁⠺⢛⣩⣴⠾⣾⣿⣿⣿⣿⠇⢠⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢳⣄⡈⠙⢿⣿⣿⡄⢙⡛⠻⣿⢶⡼⠟⠠⢾⡿⠛⢟⠁⣰⣿⣿⠟⠉⢀⣴⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠹⣶⡀⠉⢿⣷⡘⢿⣶⣦⣤⣅⣀⣠⣤⣶⣷⡿⢡⣿⡟⠁⢠⣴⠏⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+... (full ASCII logo goes here)
 </pre>
 
 <div class="modal" id="ownersModal">
@@ -255,20 +238,23 @@ pre#flyingLogo {
 <div class="skip-btn" onclick="skipToSecond()">Goto Song 2</div>
 <div class="now-playing">Now Playing: Song 1</div>
 
+<!-- Hidden YouTube player -->
 <div id="player"></div>
 <script src="https://www.youtube.com/iframe_api"></script>
 
 <script>
-// ===== MUSIC =====
+// ======= MUSIC =======
 let player;
 let currentSong = 0;
-const songs = ["xeNf2EKkpi4","mhg4J39rRdE"];
-function onYouTubeIframeAPIReady(){
-  player = new YT.Player('player',{
-    height:'0', width:'0', videoId:songs[currentSong],
-    events:{'onStateChange':onPlayerStateChange}
+const songs = ["xeNf2EKkpi4", "mhg4J39rRdE"];
+
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player('player', {
+    height: '0', width: '0', videoId: songs[currentSong],
+    events: { 'onStateChange': onPlayerStateChange }
   });
 }
+
 function onPlayerStateChange(event){
   if(event.data === YT.PlayerState.ENDED){
     currentSong = (currentSong+1) % songs.length;
@@ -276,11 +262,12 @@ function onPlayerStateChange(event){
     updateNowPlaying();
   }
 }
-function updateNowPlaying(){ document.querySelector('.now-playing').textContent='Now Playing: Song '+(currentSong+1); }
+
+function updateNowPlaying(){ document.querySelector('.now-playing').textContent = 'Now Playing: Song '+(currentSong+1); }
 function playMusic(){ if(player) player.playVideo(); }
 function skipToSecond(){ currentSong=1; player.loadVideoById(songs[currentSong]); updateNowPlaying(); document.querySelector('.skip-btn').style.display='none'; }
 
-// ===== CLOCK =====
+// ======= CLOCK =======
 function updateClock(){
   const now=new Date();
   const h=String(now.getHours()).padStart(2,'0');
@@ -291,22 +278,23 @@ function updateClock(){
 setInterval(updateClock,1000);
 updateClock();
 
-// ===== MATRIX BACKGROUND =====
+// ======= MATRIX BACKGROUND =======
 const matrixCanvas = document.getElementById('matrix');
 const ctx = matrixCanvas.getContext('2d');
-matrixCanvas.width=window.innerWidth;
-matrixCanvas.height=window.innerHeight;
+matrixCanvas.width = window.innerWidth;
+matrixCanvas.height = window.innerHeight;
 const letters = '01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%^&*()*&^%';
-const fontSize=14;
+const fontSize = 14;
 const columns = Math.floor(matrixCanvas.width/fontSize);
 const drops = Array(columns).fill(1);
+
 function drawMatrix(){
   ctx.fillStyle='rgba(0,0,0,0.1)';
   ctx.fillRect(0,0,matrixCanvas.width,matrixCanvas.height);
   ctx.fillStyle='#00ff00';
-  ctx.font=fontSize+'px monospace';
+  ctx.font = fontSize+'px monospace';
   for(let i=0;i<drops.length;i++){
-    const text=letters[Math.floor(Math.random()*letters.length)];
+    const text = letters[Math.floor(Math.random()*letters.length)];
     ctx.fillText(text,i*fontSize,drops[i]*fontSize);
     if(drops[i]*fontSize>matrixCanvas.height && Math.random()>0.975) drops[i]=0;
     drops[i]++;
@@ -316,52 +304,30 @@ function drawMatrix(){
 drawMatrix();
 window.addEventListener('resize',()=>{ matrixCanvas.width=window.innerWidth; matrixCanvas.height=window.innerHeight; });
 
-// ===== FLYING LOGO =====
+// ======= FLYING ASCII LOGO =======
 const logo = document.getElementById('flyingLogo');
-let logoX=Math.random()*(window.innerWidth-500), logoY=Math.random()*(window.innerHeight-500);
-let velX=(Math.random()*2+1)*(Math.random()<0.5?1:-1);
-let velY=(Math.random()*2+1)*(Math.random()<0.5?1:-1);
+let logoX = Math.random()*(window.innerWidth-400);
+let logoY = Math.random()*(window.innerHeight-400);
+let velX = (Math.random()*2+1)*(Math.random()<0.5?1:-1);
+let velY = (Math.random()*2+1)*(Math.random()<0.5?1:-1);
 function moveLogo(){
   logoX+=velX; logoY+=velY;
-  if(logoX<=0 || logoX+500>=window.innerWidth) velX*=-1;
-  if(logoY<=0 || logoY+500>=window.innerHeight) velY*=-1;
+  if(logoX<=0 || logoX+400>=window.innerWidth) velX*=-1;
+  if(logoY<=0 || logoY+400>=window.innerHeight) velY*=-1;
   logo.style.left=logoX+'px';
   logo.style.top=logoY+'px';
   requestAnimationFrame(moveLogo);
 }
 moveLogo();
 
-// ===== FLOATING ASCII =====
-const asciiCanvas=document.getElementById('asciiFloating');
-const asciiCtx=asciiCanvas.getContext('2d');
-asciiCanvas.width=window.innerWidth;
-asciiCanvas.height=window.innerHeight;
-let floats=[];
-for(let i=0;i<50;i++){
-  floats.push({x:Math.random()*window.innerWidth, y:Math.random()*window.innerHeight, char:letters[Math.floor(Math.random()*letters.length)], speed:Math.random()*1.5+0.5});
-}
-function drawFloats(){
-  asciiCtx.clearRect(0,0,asciiCanvas.width,asciiCanvas.height);
-  asciiCtx.fillStyle='#ff00ff';
-  asciiCtx.font='16px monospace';
-  floats.forEach(f=>{
-    asciiCtx.fillText(f.char,f.x,f.y);
-    f.y+=f.speed;
-    if(f.y>asciiCanvas.height){ f.y=0; f.x=Math.random()*asciiCanvas.width; f.char=letters[Math.floor(Math.random()*letters.length)]; }
-  });
-  requestAnimationFrame(drawFloats);
-}
-drawFloats();
-window.addEventListener('resize',()=>{ asciiCanvas.width=window.innerWidth; asciiCanvas.height=window.innerHeight; });
-
-// ===== ENTER SCREEN =====
-document.getElementById('enterScreen').onclick=()=>{
+// ======= ENTER SCREEN =======
+document.getElementById('enterScreen').onclick = ()=>{
   document.getElementById('enterScreen').style.display='none';
   document.getElementById('mainPage').style.display='flex';
   playMusic();
 };
 
-// ===== HOA =====
+// ======= HOA =======
 document.querySelector('.hoa-btn').onclick=()=>{
   document.getElementById('mainPage').style.display='none';
   document.getElementById('hoaPage').style.display='flex';
@@ -371,13 +337,13 @@ function backToMain(){
   document.getElementById('mainPage').style.display='flex';
 }
 
-// ===== OWNERS MODAL =====
-const ownersBtn=document.getElementById('ownersBtn');
-ownersBtn.onclick=()=>{ document.getElementById('ownersModal').style.display='flex'; modalMatrix(); };
+// ======= OWNERS MODAL =======
+const ownersBtn = document.getElementById('ownersBtn');
+ownersBtn.onclick = ()=>{ document.getElementById('ownersModal').style.display='flex'; modalMatrix(); };
 function closeOwners(){ document.getElementById('ownersModal').style.display='none'; }
 
 function modalMatrix(){
-  const c=document.getElementById('modalMatrix'); const ctx=c.getContext('2d');
+  const c = document.getElementById('modalMatrix'); const ctx=c.getContext('2d');
   c.width=c.offsetWidth; c.height=c.offsetHeight;
   const letters='01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%^&*()*&^%';
   const fontSize=14; const cols=c.width/fontSize;
@@ -396,13 +362,12 @@ function modalMatrix(){
   drawM();
 }
 
-// ===== RTF BOX =====
-document.getElementById('rtfBox').onclick=()=>{ alert('Rtf The Larp!'); };
+// ======= RTF BOX CLICK =======
+document.getElementById('rtfBox').onclick = ()=>{ alert('Rtf The Larp!'); };
 
 </script>
 </body>
 </html>
-
 
 
 
